# rust-course-fei

./: LICENSE  README.md
archive/: README.md
archive/2023/: README.md
archive/2023/exercises/01/: README.md
archive/2023/exercises/03/: README.md
archive/2023/exercises/04/: README.md
archive/2023/projects/assembly-interpret/: README.md
archive/2023/projects/network-chat/01/: Cargo.toml
archive/2023/projects/network-chat/01/src/: lib.rs  messages.rs  writer.rs
archive/2023/projects/shell-interpret/: Cargo.toml
exercises/01/: README.md
exercises/01/tests/: 01_factorial.rs
exercises/02/: README.md
exercises/03/: README.md
exercises/03/exercises/tests/: 01_longest.rs  02_strip_prefix.rs  04_match_parentheses.rs
exercises/04/exercises/tests/: 01_fibonacci.rs  05_adjacent_diff.rs  06_count.rs
lessons/: README.md
lessons/01/exercises/: Cargo.toml
lessons/01/exercises/src/: main.rs
lessons/01/ub-examples/: aliasing.cpp  iterate.py  oob.cpp  unused-fn.cpp
lessons/02/exercises/: Cargo.toml  README.md
lessons/03/exercises/: Cargo.toml  README.md
lessons/04/exercises/: Cargo.toml
lessons/05/exercises/: Cargo.toml  README.md
lessons/06/exercises/: Cargo.toml  README.md
lessons/07/exercises/: Cargo.toml  README.md
lessons/08/exercises/: Cargo.toml  README.md
lessons/09/exercises/: Cargo.toml  README.md
lessons/09/exercises/src/: lib.rs  reader.rs  writer.rs
lessons/10/exercises/: Cargo.toml
projects/assembly-interpret/: README.md
projects/assembly-interpret/01/: Cargo.toml
projects/network-chat/02/: Cargo.toml
(+102 files in other folders)
