[package]
name = "week09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
# Replace with a different low-level I/O crate on macOS/Windows
# You can also try to use mio, which is cross-platform
epoll = "4.3.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
